# f1-telemetry

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_game_sessions.py
api/src/f1_telemetry/: main.py
api/src/f1_telemetry/api/: routes.py
api/src/f1_telemetry/core/: config.py
api/src/f1_telemetry/db/: session.py
api/src/f1_telemetry/ingest/: parser.py
api/src/f1_telemetry/models/: entities.py
api/src/f1_telemetry/schemas/: telemetry.py
api/src/f1_telemetry/services/: capture.py  hub.py  sessions.py
api/tests/: test_api.py  test_parser.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  telemetryMetrics.ts
web/src/api/: client.ts
web/src/components/: MetricCard.tsx  MetricComparisonChart.tsx  TelemetryChart.tsx
web/src/pages/: LivePage.tsx  SessionsPage.tsx
web/src/styles/: app.css
