[project]
name = "f1-telemetry-api"
version = "0.1.0"
description = "FastAPI backend for F1 25 telemetry capture, replay, and comparison."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "f1-packets==2025.1.1",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_telemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
